tests/cases/standard-library/errors/vec/std-vec-reserve-untracked-receiver.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var vec = std::vec::Vec<i64> {
    raw: std::vec::RawVec<i64> {
      data: 0u64 as ptr i64,
      len: 0,
      capacity: 0,
    },
    zone: 0u64 as ptr Zone,
  };

  vec.reserve(1);

  zone::destroy(zone);
  return 0;
}
